--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -5,12 +5,12 @@
   <div class="panel-body">
     <form [formGroup]="angForm" novalidate>
       <div class="form-group">
-        <label class="col-md-4">Coin Name</label>
+        <label class="col-md-4">First Name</label>
         <input type="text" class="form-control" formControlName="name" #name />
       </div>
       <div *ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty || angForm.controls['name'].touched)" class="alert alert-danger">
         <div *ngIf="angForm.controls['name'].errors.required">
-          Name is required.
+          First Name is required.
         </div>
       </div>
       <div class="form-group">
