--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,18 +1,20 @@
 <table class="table table-hover">
   <thead>
   <tr>
-      <td>Coin Name</td>
-      <td>Coin Price</td>
+      <td>First Name</td>
+      <td>Last Name</td>
+      <td>Gender</td>
       <td colspan="2">Actions</td>
   </tr>
   </thead>
 
   <tbody>
-      <tr *ngFor="let coin of coins">
-          <td>{{ coin.name }}</td>
-          <td>{{ coin.price }}</td>
-          <td><a [routerLink]="['/edit', coin._id]" class="btn btn-primary">Edit</a></td>
-          <td><button (click)="deleteCoin(coin._id)"  class="btn btn-danger">Delete</button></td>
+      <tr *ngFor="let costumer of costumers">
+          <td>{{ costumer.name.first }}</td>
+          <td>{{ costumer.name.last }}</td>
+          <td>{{ costumer.gender }}</td>
+          <td><a [routerLink]="['/edit', costumer._id]" class="btn btn-primary">Edit</a></td>
+          <td><button (click)="deleteCoin(costumer._id)"  class="btn btn-danger">Delete</button></td>
       </tr>
   </tbody>
 </table>
