New model and navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a routerLink="create" routerLinkActive="active">
+          <a routerLink="index" routerLinkActive="active">
             Add Costumers
           </a>
         </li>    
