--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -6,24 +6,25 @@
     <form [formGroup]="angForm" novalidate>
       <div class="form-group">
         <label class="col-md-4">First Name</label>
-        <input type="text" class="form-control" formControlName="name" #name />
+        <input type="text" class="form-control" formControlName="first_name" #first_name [(ngModel)]="costumer.name.first"/>
       </div>
-      <div *ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty || angForm.controls['name'].touched)" class="alert alert-danger">
-        <div *ngIf="angForm.controls['name'].errors.required">
+      <div *ngIf="angForm.controls['first_name'].invalid && (angForm.controls['first_name'].dirty || angForm.controls['first_name'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['first_name'].errors.required">
           First Name is required.
         </div>
       </div>
       <div class="form-group">
-        <label class="col-md-4">Coin Price</label>
-        <input type="text" class="form-control" formControlName="price" #price/>
+        <label class="col-md-4">Last Name</label>
+        <input type="text" class="form-control" formControlName="last_name" #last_name [(ngModel)]="costumer.name.last"/>
       </div>
-      <div *ngIf="angForm.controls['price'].invalid && (angForm.controls['price'].dirty || angForm.controls['price'].touched)" class="alert alert-danger">
-        <div *ngIf="angForm.controls['price'].errors.required">
-          Price is required.
+      <div *ngIf="angForm.controls['last_name'].invalid && (angForm.controls['last_name'].dirty || angForm.controls['last_name'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['last_name'].errors.required">
+          Last Name is required.
         </div>
       </div>
-        <div class="form-group">
-          <button (click)="addCoin(name.value, price.value)" [disabled]="angForm.pristine || angForm.invalid" class="btn btn-primary">Add</button>
+        <div class="btn-toolbar">
+          <button (click)="addCostumer(costumer)" [disabled]="angForm.pristine || angForm.invalid" class="btn btn-primary">Add</button>
+          <a [routerLink]="['/index']" class="btn btn-primary">Back</a>
         </div>
     </form>
   </div>
